force-app/main/default/objects/Alert__c/fields/Duration__c.field-meta.xml
<CustomField>
    <fullName>Duration__c</fullName>
    <inlineHelpText>Hoeveel seconden moet het bericht getoond worden? Dit geldt alleen voor de modi Dismissible en Pester.</inlineHelpText>
    <label>Duration (Seconds)</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>