force-app/main/default/objects/Alert__c/fields/IconPick__c.field-meta.xml
<CustomField>
    <fullName>IconPick__c</fullName>
    <inlineHelpText>priority = 🚩
notification = 🔔
lock = 🔒
like = 👍🏻
dislike = 👎🏻
announcement = 📣
emoji = 🙂
heart = ❤️
case = 💼
clock = 🕒
delete = 🗑️
edit = ✏️
email = 📩</inlineHelpText>
    <label>Icon</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>TypePick__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>priority</fullName>
            </value>
            <value>
                <fullName>notification</fullName>
            </value>
            <value>
                <fullName>lock</fullName>
            </value>
            <value>
                <fullName>like</fullName>
            </value>
            <value>
                <fullName>dislike</fullName>
            </value>
            <value>
                <fullName>announcement</fullName>
            </value>
            <value>
                <fullName>emoji</fullName>
            </value>
            <value>
                <fullName>heart</fullName>
            </value>
            <value>
                <fullName>case</fullName>
            </value>
            <value>
                <fullName>clock</fullName>
            </value>
            <value>
                <fullName>delete</fullName>
            </value>
            <value>
                <fullName>edit</fullName>
            </value>
            <value>
                <fullName>email</fullName>
            </value>
            <value>
                <fullName>error</fullName>
                <isActive>false</isActive>
                <label>error</label>
            </value>
            <value>
                <fullName>info</fullName>
                <isActive>false</isActive>
                <label>info</label>
            </value>
            <value>
                <fullName>success</fullName>
                <isActive>false</isActive>
                <label>success</label>
            </value>
            <value>
                <fullName>warning</fullName>
                <isActive>false</isActive>
                <label>warning</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>