force-app/main/default/objects/Alert__c/fields/ModePick__c.field-meta.xml
<CustomField>
    <fullName>ModePick__c</fullName>
    <inlineHelpText>- Dismissible: geeft het bericht weer totdat er op de knop Sluiten wordt geklikt of totdat de tijdsduur is verstreken. - Pester: wordt weergegeven totdat de tijdsduur is verstreken. Er is geen sluitknop beschikbaar. - Sticky: blijft weergegeven tot er op de sluitknop wordt gedrukt.</inlineHelpText>
    <label>Mode</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Dismissible</fullName>
            </value>
            <value>
                <fullName>Pester</fullName>
            </value>
            <value>
                <fullName>Sticky</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>