force-app/main/default/objects/Alert__c/fields/Title__c.field-meta.xml
<CustomField>
    <fullName>Title__c</fullName>
    <inlineHelpText>De titel is optioneel. Als je een titel opgeeft, staat deze op de eerste regel met een groter lettertype en het bericht op de tweede regel met een kleiner lettertype.</inlineHelpText>
    <label>Title</label>
    <length>100</length>
    <type>Text</type>
</CustomField>