force-app/main/default/objects/Alert__c/fields/URLLabel__c.field-meta.xml
<CustomField>
    <fullName>URLLabel__c</fullName>
    <inlineHelpText>Dit is het label voor de link in je bericht. Om een klikbare link in het bericht op te nemen, plaats je de tekens {url} in je bericht. Tijdens het uitvoeren zal het bericht worden bijgewerkt om {url} te vervangen door de waarde van je &quot;URL Label&quot; en het zal linken naar het adres dat je hebt opgegeven in de URL Link.</inlineHelpText>
    <label>URL Label</label>
    <length>100</length>
    <type>Text</type>
</CustomField>