force-app/main/default/objects/Alert__c/fields/URLLink__c.field-meta.xml
<CustomField>
    <fullName>URLLink__c</fullName>
    <inlineHelpText>Dit is de URL voor de link in je bericht.</inlineHelpText>
    <label>URL Link</label>
    <type>Url</type>
</CustomField>